corrected a line of code in the index.js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ b
      <ul>
         <li>Free Wifi</li>
         <li>Swimming Pool</li>
-        <li>Chidren Playground</li>
+        <li>Chidren Playhouse</li>
      </ul>
 
     
